[add] tensorflow citatiotn

--- a/requirementsReport.bib
+++ b/requirementsReport.bib
@@ -20,3 +20,9 @@ year = {1996}
   year={2013},
   organization={Springer}
 }
+@article{abadi2016tensorflow,
+  title={Tensorflow: Large-scale machine learning on heterogeneous distributed systems},
+  author={Abadi, Mart{\i}n and Agarwal, Ashish and Barham, Paul and Brevdo, Eugene and Chen, Zhifeng and Citro, Craig and Corrado, Greg S and Davis, Andy and Dean, Jeffrey and Devin, Matthieu and others},
+  journal={arXiv preprint arXiv:1603.04467},
+  year={2016}
+}
