--- a/requirementsReport.tex
+++ b/requirementsReport.tex
@@ -72,7 +72,7 @@ We can divide this application in three building blocks :
 	\item A virtual-reality environment.
 \end{itemize}
 
-The image tagging system will use a deep-neural network. To avoid spending too much time on that part and because research on that field is quite advanced \todo{cite}, we will use an existing open source software library called \textit{TensorFlow} \todo{cite}. We will also use a trained neural network \todo{cite}
+The image tagging system will use a deep-neural network. To avoid spending too much time on that part and because research on that field is quite advanced, we will use an existing open source software library called \textit{TensorFlow} \cite{abadi2016tensorflow}. We will also use a trained neural network provided on the tensorflow website \footnote{https://www.tensorflow.org/}.
 
 The voice recognition system will probably also use a existing library such as the one written by microsoft\footnote{https://msdn.microsoft.com/en-us/library/office/hh361683(v=office.14).aspx}
 
