[add] stuff to the report

--- a/report/final/report.tex
+++ b/report/final/report.tex
@@ -15,8 +15,33 @@
 \begin{document}
 
 \maketitle
+
+\section{Introduction}
+
+New generation user interfaces are developing day by day, with new tools, devices and different use cases showing up.
+
+Of those devices, Virtual Reality sets are expanding as those devices get more affordable and many research team started working on it. 
+
+Our brainstorming led to us imagining a future where we would use Virtual Reality on common basis, we thought about what an user would like to have and that doesn't exist yet, and how to implement it to make the user feel comfortable in this totally new environment. 
+
+The system will offer the user a collection of pictures in a Virtual Reality environment, allowing him to browse them intelligently.
+
 \section{Problem to be solved}
+
+Since the numeric revolution, humans tend to take a ton of pictures. It is especially true during their holidays, usually coming back with thousands of pictures. The problem that arise then is that human don't usually have a mean to explore them all other than browsing through them one by one. So, the idea for the project is to create a \textit{Intelligent Picture Browser (IPB)} to fill that void.
+
 \section{Requirement Analysis}
+
+\subsection{User characteristics}
+The interface will be design to fit almost every individual having the capacity to use  a virtual reality set. It will target technological novice as well as professional. Unfortunately, people with disabilities preventing them from using a VR set won't be able to use our system.
+\subsection{Usability goals}
+
+The usability of this project is going to be as much as straightforward as possible and will not require any particular skill or educational background. However having a regular access to technologies and computers will be a plus for a smooth first use. 
+
+\subsection{User experience goals}
+
+The main goal is to make the user relive the moment immortalized by the pictures and helping him feel the same emotion once again.
+
 \section{Our next generation user interface}
 \subsection{Interactions}
 \subsection{Architecture}
