[add] stuff to the report

--- a/report/final/report.tex
+++ b/report/final/report.tex
@@ -32,20 +32,44 @@ Since the numeric revolution, humans tend to take a ton of pictures. It is espec
 
 \section{Requirement Analysis}
 
+The product should browse the user complete gallery of pictures and select a subset of them. The subset selection will be based on a keyword/tag selection. The keyword/tag is automatically linked to pictures by a AI algorithm.
+
+The user will be able to interact with the interface trough the virtual reality set and be able to select tag and some settings via voice.
+
 \subsection{User characteristics}
-The interface will be design to fit almost every individual having the capacity to use  a virtual reality set. It will target technological novice as well as professional. Unfortunately, people with disabilities preventing them from using a VR set won't be able to use our system.
+The interface will be design to fit almost every individual having the capacity to use a virtual reality set and voice recognition. It will target technological novice as well as professional. Unfortunately, people with disabilities preventing them from using a VR set or voice recognition won't be able to use our system.
+
 \subsection{Usability goals}
 
-The usability of this project is going to be as much as straightforward as possible and will not require any particular skill or educational background. However having a regular access to technologies and computers will be a plus for a smooth first use. 
+The usability of this project is going to be as much as straightforward as possible and will not require any particular skill or educational background. However having a regular access to technologies and computers will be a plus for a smoother use. 
 
 \subsection{User experience goals}
 
-The main goal is to make the user relive the moment immortalized by the pictures and helping him feel the same emotion once again.
+The main goal is to make the user relive the moment immortalized by the pictures and helping him remember the event and feel the same emotion once again.
 
 \section{Our next generation user interface}
+\subsection{Prototyping}
+
+% first clearly defined product wanted and requirement, , iterative evolutionary prototyping with refinement PoC until an evaluted final product, we followed the init gant chart
+
+% here insert iterative pictures of our system
+
 \subsection{Interactions}
 \subsection{Architecture}
 \subsection{Challenges}
 \subsection{Evaluation}
 
+% usability testing -> ensure that user can use the product and they like it . 
+
+% Student in CS and non-tech guy with no previous knwoledge on our product.
+
+% Evalution take place in front of computer in natural setting
+
+% summative evalution -> assess the final product. How well did we do ?
+
+
 \end{document}
+
+
+
+
