--- a/report/final/report.tex
+++ b/report/final/report.tex
@@ -50,13 +50,33 @@ The main goal is to make the user relive the moment immortalized by the pictures
 \section{Our next generation user interface}
 \subsection{Prototyping}
 
-% first clearly defined product wanted and requirement, , iterative evolutionary prototyping with refinement PoC until an evaluted final product, we followed the init gant chart
+% first clearly defined product wanted and requirement, iterative evolutionary prototyping with refinement PoC until an evaluted final product, we followed the init gant chart
 
 % here insert iterative pictures of our system
 
 \subsection{Interactions}
+
+% voice recognition for tag and non-vive-command intuite interaction
+% for intuitive interaction
+
 \subsection{Architecture}
+
+% NN for tag -> json
+
+% Utinty interface <- json
+% unity interface <- win10 speech recognizer
+
+
 \subsection{Challenges}
+
+% use unity and all its specificities
+
+% poor software interoperability, as a result our project only work on win 10
+
+% vr new and doc is bad
+
+% require a monster computer
+
 \subsection{Evaluation}
 
 % usability testing -> ensure that user can use the product and they like it . 
