[add] stuff to the report

--- a/report/final/report.tex
+++ b/report/final/report.tex
@@ -47,8 +47,37 @@ The usability of this project is going to be as much as straightforward as possi
 
 The main goal is to make the user relive the moment immortalized by the pictures and helping him remember the event and feel the same emotion once again.
 
-\section{Our next generation user interface}
-\subsection{Prototyping}
+\section{Prototyping}
+
+\subsection{Iteration 1}
+
+%define problem/need and how our system is going to solve it and technologies used
+
+\subsection{Iteration 2}
+
+% define the requirements
+
+\subsection{Iteration 3}
+
+% getting a prototype where all technologies work separately (low-fidelity)
+
+\subsection{Iteration 4}
+
+% gettin a prototype where all techno work together
+
+\subsection{Iteration 5}
+
+% improvement to techno (or and and, image around, minors)
+
+\subsection{Iteration 6}
+
+% improvement (display of tag suggestion, pictures moving toward a farther, selecting pictures, moving upward and downward, minor)
+
+% evaluation
+
+
+\section{Intelligent Picture Browser}
+
 
 % first clearly defined product wanted and requirement, iterative evolutionary prototyping with refinement PoC until an evaluted final product, we followed the init gant chart
 
