[add] stuff to the report

--- a/report/final/report.tex
+++ b/report/final/report.tex
@@ -36,42 +36,69 @@ The product should browse the user complete gallery of pictures and select a sub
 
 The user will be able to interact with the interface trough the virtual reality set and be able to select tag and some settings via voice.
 
+\subsection{Data requirements}
+
+The interface should work with any set of pictures in a \textit{jpg} format. However for testing and demonstration purpose, a preloaded set of 300 holiday pictures will be available
+
 \subsection{User characteristics}
+
 The interface will be design to fit almost every individual having the capacity to use a virtual reality set and voice recognition. It will target technological novice as well as professional. Unfortunately, people with disabilities preventing them from using a VR set or voice recognition won't be able to use our system.
 
 \subsection{Usability goals}
 
-The usability of this project is going to be as much as straightforward as possible and will not require any particular skill or educational background. However having a regular access to technologies and computers will be a plus for a smoother use. 
+The usability of this project is going to be as much as straightforward as possible and will not require any particular skill or educational background. However having a regular access to technologies and computers will be a plus for a smoother use. In brief, it should be easy to learn, efficient and effective.
+% requirement on our ngui in particukar
 
 \subsection{User experience goals}
 
-The main goal is to make the user relive the moment immortalized by the pictures and helping him remember the event and feel the same emotion once again.
+The main goal is to make the user relive the moment immortalized by the pictures and helping him remember the event and feel the same emotion once again. % user should feel that it is useful enjoyable, engaging and FUN
 
 \section{Prototyping}
 
-\subsection{Iteration 1}
+For the design, implementation and validation of the next generation user interface, we worked in an iterative way.
+The idea was to create multiple evolutionary prototyping. Each prototype was then presented to the class. With such a method, we were able to create a final product on time and validated its usability.
+
+\subsection{Iteration 1 : problem defined}
 
 %define problem/need and how our system is going to solve it and technologies used
+The first iteration consisted mainly on a brainstorm about which next-generation interface to design.
+Multiple aspect have been taken into account
 
-\subsection{Iteration 2}
+% asumption : user want to browse their pictures easyly, many tales of flemme
+% added value of our interface
+% user was in the center of the design, how it was going to be used 
+
+\subsection{Iteration 2 : requirements defined}
 
 % define the requirements
 
-\subsection{Iteration 3}
+% user-centred design involves users throughout the process
+
+\subsection{Iteration 3 : low-fidelity prototype}
 
 % getting a prototype where all technologies work separately (low-fidelity)
 
-\subsection{Iteration 4}
+\subsection{Iteration 4 : high fidelity prototype}
 
-% gettin a prototype where all techno work together
+% gettin a basic prototype where all techno work together
 
-\subsection{Iteration 5}
+\subsection{Iteration 5 : prototype improvement }
+
+% Focus on user goals and on usability 
 
 % improvement to techno (or and and, image around, minors)
 
-\subsection{Iteration 6}
+\subsection{Iteration 6 : final product}
 
 % improvement (display of tag suggestion, pictures moving toward a farther, selecting pictures, moving upward and downward, minor)
+
+% usability
+
+% we add visibility (of feature)
+
+% natural mapping (of action to do function)
+
+% feedback (if i look at a picture it get slightly bigger
 
 % evaluation
 
@@ -102,7 +129,9 @@ The main goal is to make the user relive the moment immortalized by the pictures
 
 % poor software interoperability, as a result our project only work on win 10
 
-% vr new and doc is bad
+% making the function visible
+
+% VR new and doc is bad
 
 % require a monster computer
 
