[add] stuff to the report

--- a/report/final/report.tex
+++ b/report/final/report.tex
@@ -30,7 +30,7 @@ The system will offer the user a collection of pictures in a Virtual Reality env
 
 Since the numeric revolution, humans tend to take a ton of pictures. It is especially true during their holidays, usually coming back with thousands of pictures. The problem that arise then is that human don't usually have a mean to explore them all other than browsing through them one by one. So, the idea for the project is to create a \textit{Intelligent Picture Browser (IPB)} to fill that void.
 
-\section{Requirement Analysis}
+\section{Requirement Analysis} \label{requi}
 
 The product should browse the user complete gallery of pictures and select a subset of them. The subset selection will be based on a keyword/tag selection. The keyword/tag is automatically linked to pictures by a AI algorithm.
 
@@ -66,12 +66,9 @@ The added value of our idea to traditional iterative picture browser was an inte
 
 \subsection{Iteration 2 : requirements defined}
 
-% define the requirements
+This iteration was about planning the realization of the idea for the interface and getting the requirements right. We presented the requirements in section \ref{requi}. The planning consisted of a gant chart with a general idea of the timeline we were going to follow for the next 3 months. Of course, due to unpredictable challenges some part got delayed and some moved quicker than expected.
 
-% user-centred design involves users throughout the process
-
-% planning, deadlining
-
+% insert that gant chart
 \subsection{Iteration 3 : low-fidelity prototype}
 
 This iteration was all about making sure the product is feasible and that requirements could be reached by making a low-fidelity prototype with all components working separately.
@@ -96,18 +93,13 @@ We also added more advanced queries, where a user can do the union and the inter
 
 \subsection{Iteration 6 : final product}
 
-% improvement (display of tag suggestion, pictures moving toward a farther, selecting pictures, moving upward and downward, minor)
+This iteration was about finishing and polishing our user interface. We first added visibility to the features implemented and that a user can possibly use. To do that we added to tag suggestion and selected tag to the screen.
 
-% usability
+We also added feedback to the user. When he looks a pictures it get slightly bigger making him knows which one is currently selected.
 
-% we add visibility (of feature)
+We also map the Vive "hand" controller to movement inside the interface which are going upward and downward. We also added the possibility to move the image closer or farther by saying those keyword. 
 
-% natural mapping (of action to do function)
-
-% feedback (if i look at a picture it get slightly bigger
-
-% evaluation
-
+Finally, we also made the evaluation of the interface presented in \ref{eval}.
 
 \section{Technical : Intelligent Picture Browser}
 
@@ -150,7 +142,7 @@ The selected technologies are :
 
 % require a monster computer
 
-\subsection{Evaluation}
+\subsection{Evaluation} \label{eval}
 
 % usability testing -> ensure that user can use the product and they like it . 
 
