[add] stuff to the report

--- a/report/final/report.tex
+++ b/report/final/report.tex
@@ -76,7 +76,7 @@ The idea here was to find solution for each of those components :
 \begin{itemize}
 	\item A Neural Network capable of automatically tagging the image,
 	\item A framework to support the HTV Vive Virtual reality set,
-	\item A Speech recognizer interoperable with the chosen VR framework,
+	\item A speech recognizer interoperable with the chosen VR framework,
 \end{itemize}
 
 More information about the technologies used can be find in architecture section \ref{techntechno} .
@@ -106,7 +106,15 @@ Finally, we also made the evaluation of the interface presented in \ref{eval}.
 
 % first clearly defined product wanted and requirement, iterative evolutionary prototyping with refinement PoC until an evaluted final product, we followed the init gant chart
 
-% here insert iterative pictures of our system
+
+\subsection{Functionality}
+
+% select tag
+% select subset of tag
+% turn picture
+% closer and farther
+% move around
+
 
 \subsection{Interactions}
 
@@ -136,22 +144,51 @@ The selected technologies are :
 
 % poor software interoperability, as a result our project only work on win 10
 
+% speech recognition is bad
+
 % making the function visible
 
 % VR new and doc is bad
 
 % require a monster computer
 
-\subsection{Evaluation} \label{eval}
+\section{Evaluation} \label{eval}
 
-% usability testing -> ensure that user can use the product and they like it . 
+In addition to continuous feedback from the teaching team and others student, we did a formal evaluation.
+
+This evaluation aim is twofold; first assess the usability and assess the user experience.
+
+Dealing with limited means, our evaluation is limited to three volunteers evaluators with no previous knowledge of our product.
+
 
 % Student in CS and non-tech guy with no previous knwoledge on our product.
 
 % Evalution take place in front of computer in natural setting
 
-% summative evalution -> assess the final product. How well did we do ?
 
+\subsection{Usability}
+
+\subsubsection{Conducting evaluation}
+
+The evaluation is a discount evaluation of 3 users using Nielsen Heuristic. According to Nielsen and Landauer (1993), this evaluation should allows us to discover about 60 percents of usability problems. Also according to Nielsen and Landauer the cost to benefit ratio of having 3 users is nearly maximal just under a ratio of 60.
+
+% how it was done
+
+\subsubsection{Results}
+
+\subsection{User experience}
+
+
+\subsubsection{Conducting evaluation}
+
+\subsubsection{Results}
+
+
+
+\section{Acknowledgement}
+
+Before ending this report, we would really like to thanks the VUB Soft Lab for lending us the HTC Vive needed for the realization of this project.
+We also would like to thanks the participant of the evaluation and all that give us feedback during the making of this Next-gen UI.
 
 \section{Conclusion}
 
