--- a/report/final/report.tex
+++ b/report/final/report.tex
@@ -60,7 +60,7 @@ The idea was to create multiple evolutionary prototyping. Each prototype was the
 
 \subsection{Iteration 1 : problem defined}
 
-The first iteration consisted mainly on sitting in a confortable room and brainstorming about which next-generation interface to design. Many idea had emerged and the one that convince us the most was to innovate in the picture browsing field. Indeed, multiple technologies have recently appears on the market and we though they could be use to enhance usability and user experience of such systems.
+The first iteration consisted mainly on sitting in a comfortable room and brainstorming about which next-generation interface to design. Many idea had emerged and the one that convince us the most was to innovate in the picture browsing field. Indeed, multiple technologies have recently appears on the market and we though they could be use to enhance usability and user experience of such systems.
 The first and main assumption made on behalf of the user is that the user possess a lot of picture but don't have the time of to browse or sort them all. We want to solve this user's problem.
 The added value of our idea to traditional iterative picture browser was an intelligence which recognize effortlessly the content of user's pictures and immersive way to browse them thanks to new immersive technology known as virtual reality and voice recognition.
 
@@ -102,19 +102,23 @@ We also map the Vive "hand" controller to movement inside the interface which ar
 Finally, we also made the evaluation of the interface presented in \ref{eval}.
 
 \section{Technical : Intelligent Picture Browser}
+The Intelligent Picture Browser is built to work on state of the art technology, in order to offer to the user a new kind of interaction.
+It uses Virtual Reality for displaying and partially interacting, a neural network to categorize the pictures and speech recognition for selecting them.
 
-
-% first clearly defined product wanted and requirement, iterative evolutionary prototyping with refinement PoC until an evaluted final product, we followed the init gant chart
-
+It has a multimodal interface, that involves visualization, speaking and movement.
+Other than interacting with the speech recognition, some commands are linked to the physical controllers of the HTC vive, that permits, in those cases, to have faster interaction.
 
 \subsection{Functionality}
 
-% select tag
-% select subset of tag
-% turn picture
-% closer and farther
-% move around
+The user can select a tag and the system will show the picures associated.
+He can select subsets of tags via an \textit{and} query, or he can do the union of two subsets with an \textit{or} query.
+It can select a picture by just looking at it, and it can ask to the system to show the pictures closer or further, that it's, at the end, a zoom. All those interactions are done via voice recognition.
 
+The user can move around, if the space around him allows, and get physically closer to the pictures to analyze them better.
+Since the pictures are shown in a sort of cylinder all around the user, he might need to go up or down inside this cylinder in order to see partially hidden pictures. To do so, he can use the pad of the HTC vive controller, that will offer immediate feedback on the pressure of up or down. With the use of the controller the user can also rotate the selected picture by 90°.
+
+Whenever the user looks on the ground, he can find a set of suggestions. Those suggestions are selected basing on the tags of the pictures shown, allowing the user to find similar tags that might show similar pictures.
+An help system is also provided when \textit{help} is pronounced, offering the user support on how to activate the functionalities.
 
 \subsection{Interactions}
 
@@ -136,6 +140,9 @@ The selected technologies are :
 
 % Utinty interface <- json
 % unity interface <- win10 speech recognizer
+
+% scripts used? 
+% internal representation of the images (dictionary, paths, tags)
 
 
 \subsection{Challenges}
