[fix] now it compiles

--- a/report/final/report.tex
+++ b/report/final/report.tex
@@ -115,7 +115,7 @@ He can select subsets of tags via an \textit{and} query, or he can do the union 
 It can select a picture by just looking at it, and it can ask to the system to show the pictures closer or further, that it's, at the end, a zoom. All those interactions are done via voice recognition.
 
 The user can move around, if the space around him allows, and get physically closer to the pictures to analyze them better.
-Since the pictures are shown in a sort of cylinder all around the user, he might need to go up or down inside this cylinder in order to see partially hidden pictures. To do so, he can use the pad of the HTC vive controller, that will offer immediate feedback on the pressure of up or down. With the use of the controller the user can also rotate the selected picture by 90°.
+Since the pictures are shown in a sort of cylinder all around the user, he might need to go up or down inside this cylinder in order to see partially hidden pictures. To do so, he can use the pad of the HTC vive controller, that will offer immediate feedback on the pressure of up or down. With the use of the controller the user can also rotate the selected picture by 90.
 
 Whenever the user looks on the ground, he can find a set of suggestions. Those suggestions are selected basing on the tags of the pictures shown, allowing the user to find similar tags that might show similar pictures.
 An help system is also provided when \textit{help} is pronounced, offering the user support on how to activate the functionalities.
